--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Navbar</title>
+    <title>E-commerce-website</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons/css/boxicons.min.css' rel='stylesheet'>
 
