--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <i class='bx bxs-shopping-bag add-cart'>Add to Cart</i>
            </div>
            <div class="product-box">
-            <img src="img/hP.jpg" alt="" class="product-img">
+            <img src="img/hp.jpg" alt="" class="product-img">
             <h2 class="product-title">WIRELESS AIRBAND HEADPHONE</h2>
             <span class="price">$30</span>
             <button id="buy">Buy Now</button>
